# c4_rust_jumeirah

./: .gitignore  README.md  complex_test.c  simple_array_test.c  simple_test.c
PRINCIPLES PROJECT TEST/: Cargo.toml  README.md  c4.c  c4.rs  c4_rust_comparison.md  c4_rust_test.c  hello.c  main.rs  simple_test_c4.c  submit.bat  test_c4.c  test_variables.c
PRINCIPLES PROJECT TEST/src/: c4.rs  c4_rust  main.rs
PRINCIPLES PROJECT TEST/tests/: array_tests.rs  basic_test.rs  function_tests.rs  lexer_tests.rs  original_code_tests.rs  parser_tests.rs  passing_tests.rs  pointer_tests.rs  vm_tests.rs
c4_rust/: Cargo.toml  README.md  basic_test.c  complex_test.c  multiple_variables_test.c  nested_loop_test.c  output.txt  printf_var.c  run_tests.ps1  simple_array_test.c  simple_comparison_test.c  simple_printf.c  simple_printf_test.c  simple_test.c  simple_test_var.c  simple_var_test.c  single_variable_test.c  test_program.c
c4_rust/src/: lexer.rs  lib.rs  main.rs  parser.rs  vm.rs
c4_rust/tests/: function_tests.rs  lexer_tests.rs  pointer_tests.rs  printf_test.c  self_hosting_test.rs  simple_printf.c  string_complex_test.c  string_test.c  test_program.c  vm_memory_tests.rs  vm_tests.rs
c4_rust/tests/C_files/: test_1.c  test_10.c  test_11.c  test_2.c  test_4.c  test_6.c  test_7.c  test_9.c
