[package]
name = "c4_rust"
version = "1.0.0"
edition = "2021"
authors = ["TEAM JUMEIRAH - KHALIFA UNIVERSITY"]
description = "A Rust implementation of the C4 compiler by Saif Alafeefi and Zayed Alnuami"

[dependencies]
libc = "0.2" # For system calls like open, read, etc.

[dev-dependencies]
criterion = "0.3" # For optional benchmarking
